data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_724.wast
;; 5. **Test Description**: A loop that contains a `br_if` relying on a dynamically computed condition involving function calls. The loop should break if the computed value meets certain criteria.    - **Constraint**: Verifies that `br_if` handles conditions involving dynamic function call results accurately.    - **Differential Behavior**: The loop fails to break based on the function call results, indicating a condition evaluation bug.

(assert_invalid
  (module
    (func $compute (param i32) (result i32)
      (local.get 0)
      (i32.const 10)
      (i32.add)
    )
    (func $loop-test (result i32)
      (local i32)
      (loop (result i32)
        (local.get 0)
        call $compute
        (i32.const 20)
        (i32.eq)
        br_if 0
        (local.get 0)
        (i32.const 1)
        (i32.add)
        (local.set 0)
        (local.get 0)
        (i32.const 30)
        (i32.eq)
        br_if 0
        loop
        local.get 0
        call $compute
        (drop)
        (local.get 0)
      )
    )
  )
  "type mismatch"
)